ligesem/src/main/antlr4/br/ufscar/dc/compiladores/ligesem/Ligesem.g4
grammar Ligesem;

/* sintático */

program:
body EOF;

body: info (bloco_disciplina)*;

info:
'nome: ' TEXTO
'universidade: ' TEXTO
'perfil: ' NUMINT
'data: ' DATA
;


bloco_disciplina:  'DISCIPLINA'
(disciplina)+
'END_DISCIPLINA' ;

disciplina: NOME_DISCIPLINAS ',' TEXTO ',' NUMINT ',' TEXTO ';' ;


/* LEXICO */

TEXTO : '"' ( ~('"'|'\\'|'\n'|'\r') )* '"';

NUMINT	: ('+'|'-')?('0'..'9')+;

NUMINTPOS : ('0'..'9')+;

DATA : NUMINTPOS'/'NUMINTPOS'/'NUMINTPOS;

NOME_DISCIPLINAS : 'CALCULO 1' | 'INTRODUCAO AO PENSAMENTO ALGORITMO' | 'CONSTRUCAO DE ALGORITMOS E PROGRAMACAO' | 'LOGICA DIGITAL'
            | 'GEOMETRIA ANALITICA' | 'LOGICA MATEMATICA' | 'ALGORITMOS E ESTRUTURA DE DADOS 1' | 'PROGRAMACA ORIENTADA A OBJETOS'
            | 'ARQUITETURA E ORGANIZACAO DE COMPUTADORES' | 'PROBABILIDADE E ESTATISTICA' | 'CALCULO DIFERENCIAL E SERIES' 
            | 'MATEMATICA DISCRETA' | 'ALGORITMOS E ESTRUTURA DE DADOS 2' | 'ORGANIZACAO E RECUPERACAO DA INFORMACAO' | 'SISTEMAS OPERACIONAIS' 
            | 'ALGEBRA LINEAR' | 'INTERACAO HUMANO-COMPUTADOR' | 'PROJETO E ANALISE DE ALGORITMOS' | 'ENGENHARIA DE SOFTWARE 1' 
            | 'BANCO DE DADOS' | 'INTELIGENCIA ARTIFICIAL' | 'CALCULO NUMERICO' | 'REDES' | 'TEORIA DA COMPUTACAO' 
            | 'PROGRAMACAO PARALELA E DISTRIBUIDA' | 'CONSTRUCAO DE COMPILADORES' | 'METODOLOGIA CIENTIFICA' 
            | 'ESTAGIO OU TRABALHO DE CONCLUSAO DE CURSO' | 'PROGRAMACAO ORIENTADA A OBJETOS AVANCADA' | 'DESENVOLVIMENTO DE SOFTWARE PARA WEB 1'
            | 'ENGENHARIA DE SOFTWARE 2' | 'PROJETO E IMPLEMENTACAO DE BANCO DE DADOS' | 'APRENDIZADO DE MAQUINA 1' | 'COMPUTACAO GRAFICA' 
            | 'PROCESSAMENTO DIGITAL DE IMAGENS' | 'SISTEMAS DISTRIBUIDOS' | 'PARADIGMAS DE LINGUAGENS DE PROGRAMACAO' 
            | 'DESENVOLVIMENTO DE SOFTWARE PARA WEB 2' | 'ARQUITETURA DE SOFTWARE E PADROES' | 'BANCO DE DADOS PARA CIENCIA DE DADOS' 
            | 'APRENDIZADO DE MAQUINA 2' | 'PROCESSAMENTO E VISUALIZACAO DE DADOS' | 'PROCESSAMENTO DIGITAL DE IMAGENS 3D E VIDEOS' 
            | 'ARQUITETURA E ORGANIZACAO DE COMPUTADORES 2' | 'ENGENHARIA DE SISTEMAS' | 'SISTEMAS DIGITAIS' | 'DESENVOLVIMENTO MOVEL' 
            | 'DEVOPS' | 'VISAO COMPUTACIONAL' | 'PROJETO DE SISTEMAS COMPUTACIONAIS EMBARCADOS' | 'ARQUITETURA DE ALTO DESENVOLVIMENTO'
            | 'PROCESSAMENTO DE DADOS EM ESCALA'| 'HUMANAS';


fragment
ESC_SEQ	: '\\\'';
COMENTARIO
    :   '%' ~('\n'|'\r')* '\r'? '\n' {skip();}
    ;
WS  :   ( ' '
        | '\t'
        | '\r'
        | '\n'
        ) {skip();}
    ;
